--- a/shopsystem/frontend/templates/menu.html
+++ b/shopsystem/frontend/templates/menu.html
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Menu</title>
-</head>
-<body>
-    <h2>Menu</h2>
-    <ul>
-        {% for item in items %}
-        <li>
-            <p>{{ item[1] }} - ${{ item[3] }}</p>
-            <form action="{{ url_for('add_to_cart_route', item_id=item[0]) }}" method="POST">
-                <button type="submit">Add to Cart</button>
-            </form>
-        </li>
-        {% endfor %}
-        <a href="/cart">go to card</a>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+<h2>Menu</h2>
+<ul class="list-group">
+    {% for item in items %}
+    <li class="list-group-item">
+        <p>{{ item[1] }} - ${{ item[3] }}</p>
+        <form action="{{ url_for('add_to_cart_route', item_id=item[0]) }}" method="POST">
+            <button type="submit" class="btn btn-success">Add to Cart</button>
+        </form>
+    </li>
+    {% endfor %}
+</ul>
+<br>
+<a href="{{ url_for('cart') }}" class="btn btn-primary">Go to Cart</a>
+{% endblock %}
