--- a/shopsystem/frontend/templates/checkout.html
+++ b/shopsystem/frontend/templates/checkout.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Checkout</title>
-</head>
-<body>
-    <h2>Checkout</h2>
-    <form method="POST">
+{% extends 'base.html' %}
+
+{% block content %}
+<h2>Checkout</h2>
+<form method="POST">
+    <div class="form-group">
         <label for="payment_method">Payment Method:</label>
-        <input type="text" id="payment_method" name="payment_method"><br><br>
-        <button type="submit">Pay</button>
-    </form>
-</body>
-</html>
+        <input type="text" class="form-control" id="payment_method" name="payment_method" required><br>
+    </div>
+    <button type="submit" class="btn btn-primary">Pay</button>
+</form>
+{% endblock %}
