--- a/shopsystem/frontend/templates/login.html
+++ b/shopsystem/frontend/templates/login.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
-    <h2>Login</h2>
-    <form method="POST">
+{% extends 'base.html' %}
+
+{% block content %}
+<h2>Login</h2>
+<form method="POST">
+    <div class="form-group">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br><br>
+        <input type="text" class="form-control" id="username" name="username" required><br>
+    </div>
+    <div class="form-group">
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br><br>
-        <button type="submit">Login</button>
-    </form>
-</body>
-</html>
+        <input type="password" class="form-control" id="password" name="password" required><br>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+</form>
+{% endblock %}
